[tool.poetry]
name = "atomic-detection"
version = "0.1.0"
description = ""
authors = ["Maintainers <security@khulnasoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
jsonschema = "^4.20.0"
requests = "^2.31.0"
ruamel-yaml = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
